--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: GR-Athena++
-description: General-Relativistic Athena++ adaptive mesh refinement code
+description: General-relativistic adaptive mesh refinement code
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-slate
